<resources>
    <string name="app_name">ocenika</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_main">Ocenika</string>
    <string name="prompt_email">Ваш Email</string>
    <string name="prompt_username">Ваш Username</string>
    <string name="prompt_password">Ваш пароль</string>
    <string name="prompt_first_name">"Ваше Имя"</string>
    <string name="prompt_last_name">"Ваша фамилия"</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Войти </string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_skip">"Войти как гость"</string>
    <string name="action_register">"Создать аккаунт"</string>

</resources>
